# aivoid-ict-server

./: .gcloudignore  .gitignore  README.md  app.py  app.yaml  main.py  pyproject.toml  requirements.txt
libs/: upload_gcs.json  upload_gcs.py
services/: watermark_service.py
