[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["jinoov <jinho020@yonsei.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torchaudio = "^2.3.0"
audioseal = "^0.1.3"
ffmpeg-python = "^0.2.0"
scipy = "^1.13.0"
python-multipart = "^0.0.9"
flask = "^3.0.3"
flask-restx = "^1.3.0"
flask-cors = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
